# Study

./: .gitignore  .gitmodules  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  azure_openai_test.py  labqbot.js  news_recommendation.ipynb  package-lock.json  package.json  podlybot.js  pyproject.toml  sample.sh  test.js
AWS_prep/: AWS SAA-C03 notes.md  aws_associate notes.txt
Azure/: RAG_test.py  RAG_test2.py  chatbot_test.py  sample-01.py  sample-02.py  streaming_test.py
C++/: list1.txt  list2.txt  sample_main  sample_main.cpp
Dacon/: .gitignore  킥보드_autoencoder.ipynb  킥보드부산 적용.ipynb
Dacon lectures/: 실습6.py
DevDay/: LlamaIndex-Multi Modal RAG.ipynb  Multi modal RAG GPT 4o.ipynb  requirements.txt
Django/: upbeat_api.ipynb
HTML/: image_map.html  resume.html  개인신상정보.html  교수님 살려주세여.html  신고번호.html
KakaoBot/: labqbot.js  notion_url.js  package-lock.json  package.json  podlybot.js  podlybot_legacy.js  real_test.js  test_recruit.js  test_rhino.js
ML:DL/: EDA_sample_README.md  [데이썬☀️_3편]_🔍EDA (탐색적 데이터 분석) 사용 설명서 (1) - EDA & 통계치 분석.ipynb  warm_start를 위한 간단한 Data Understanding(EDA) 공유.ipynb
MLDL/: EDA_team-1.ipynb  Untitled.ipynb
MLDL/naver_boost_camp/: autorag.ipynb  chunk.yaml  corpus.parquet  corpus2.parquet  g-eval.ipynb  parse.yaml  pyproject.toml  qa.parquet  qa2.parquet  sample_qa.csv  네이버부스트캠프_예시_쿼리.csv
MLDL/naver_boost_camp/chunk_project_dir/: 0.parquet  1.parquet  2.parquet  3.parquet  chunk_config.yaml  summary.csv
MLDL/naver_boost_camp/parse_project_dir/: parsed_result.parquet  pdf.parquet  summary.csv
Neo4j/: compose.yaml
Prime_College/computer_vision/: 1_TF_Keras.ipynb  2_TF_Keras_Transfer_Learning.ipynb  3_TF_Keras_Fine_Tuning.ipynb  midterm.html  midterm.ipynb  pyproject.toml
Prime_College/computer_vision/computer_vision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Prime_College/computer_vision/기말과제/: gun_detection_yolo11_simple.html  gun_detection_yolo11_simple.ipynb  pyproject.toml
Prime_College/computer_vision/기말과제/gun_dataset_yolo/: data.yaml
Prime_College/computer_vision/기말과제/gun_dataset_yolo/val/: labels.cache
Prime_College/computer_vision/기말과제/gun_dataset_yolo/val/labels/: 10.txt  11.txt  12.txt  129.txt  13.txt  136.txt  138.txt  149.txt  165.txt  184.txt  193.txt  208.txt  211.txt  212.txt  214.txt  217.txt  221.txt  224.txt  228.txt  25.txt  261.txt  267.txt  268.txt  269.txt  27.txt  272.txt  278.txt  286.txt  288.txt  289.txt  29.txt  290.txt  294.txt  303.txt  305.txt  314.txt  317.txt  321.txt  332.txt  36.txt  (+10 more)
Prime_College/computer_vision/기말과제/notebooks/: grounded_sam_colab_demo.ipynb  mmdetection-guns-object-detection.ipynb
Prime_College/computer_vision/기말과제/runs/detect/gun_detection_yolo11n_optimized/: args.yaml  results.csv
Prime_College/computer_vision/기말과제/runs/detect/gun_detection_yolo11s_optimized/: args.yaml  results.csv
Prime_College/deep_learning_case_study/: basecode.ipynb  improved_code.html  improved_code.ipynb  notebook6c0426d760.html  notebook6c0426d760.ipynb  pyproject.toml  딥러닝 사례연구 기말과제 평가 설명.docx
Prime_College/deep_learning_case_study/.ipynb_checkpoints/: improved_code-checkpoint.ipynb
Programmers/: README.md  [lvl1]완주하지 못한 선수.txt
Python/: 국가 수도.ipynb  홀짝 구분.ipynb  Selenium_멜론차트.ipynb  Untitled.ipynb  d.py  heapq.ipynb  mdata.py  melon.xlsx  sample.py  sudoku.py  sukoku2.py  sunvalley_login_info.py  tkinter_movie_tickets.py  tkinter_random_menu.py  tkinter_sugang.py  선밸리_매크로.ipynb  인스타_crawling.ipynb  코보0712.ipynb  코보_Crawling.ipynb
parser/: layoutlmv3_config.json
pdf_parsers/: Document-Graph-Parser-RAG.ipynb  camelot.ipynb  docling.ipynb  document_extractor.ipynb  grobid.ipynb  llamaparse.ipynb  llamaparse_dynamic_section_retrieval.ipynb  pagemage.ipynb  pdfplumber.ipynb  processing_progress.json  pyproject.toml  temptest.ipynb  unstructured.ipynb  unstructured_api.ipynb  upstage.ipynb
pdf_parsers/graphparser/: base.py  core.py  layout_utils.py  parser_chains.py  pdf.py  process.py  state.py
pdf_parsers/graphparser_backup/: parser_chains.py  state.py
pdf_parsers/layoutparse/: base.py  element.py  export.py  extractor.py  file.py  pdf.py  preprocessing.py  state.py  teddynote_parser.py  upstage.py  utils.py
pdf_parsers/layoutparse/prompts/: IMAGE-SYSTEM-PROMPT.yaml  IMAGE-USER-PROMPT.yaml  TABLE-SYSTEM-PROMPT.yaml  TABLE-USER-PROMPT.yaml
pdf_parsers/megaparse_test/: main.py  pyproject.toml
pdf_parsers/paperparser/: paper-parser.ipynb  parse_papers.py  workflow.py
pdf_parsers/paperparser/paper_metadata/: sample_pdf_metadata.pkl
pdf_parsers/paperparser/processed_documents/: sample_pdf_docs.pkl
pdf_parsers/webcrawler/: crawl4AI.ipynb  firecrawl.ipynb
youtube_searcher/: get_transcript.ipynb  pyproject.toml  search.ipynb
(+1261 files in other folders)
