[tool.poetry]
name = "pdf-loader"
version = "0.1.0"
description = ""
authors = ["syshin0116 <syshin0116@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pypdf = "^5.1.0"
llama-parse = "^0.5.19"
markitdown = "^0.0.1a3"
ipykernel = "^6.29.5"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-community = "^0.3.14"
langchain-docling = "^0.2.0"
llama-index-readers-file = "^0.4.3"
pymupdf = "^1.25.2"
langchain-openai = "^0.3.1"
langgraph = "^0.2.64"
rank-bm25 = "^0.2.2"
chromadb = "^0.6.3"
crawl4ai = "^0.4.247"
crawlee = {extras = ["all"], version = "^0.5.2"}
firecrawl-py = "^1.10.2"
unstructured = {extras = ["all-docs"], version = "^0.16.23"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
