[tool.poetry]
name = "naver_boostcamp_autorag"
version = "0.1.0"
description = ""
authors = ["syshin0116 <syshin0116@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pyopenssl = "^24.3.0"
nltk = "^3.9.1"
autorag = {extras = ["ko", "parse"], version = "^0.3.12"}
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
