[project]
name = "computer-vision"
version = "0.1.0"
description = "Sign language image classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "tensorflow>=2.15.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "matplotlib>=3.8.0",
    "numpy>=1.25.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "pyheif>=0.8.0",
    "pillow-heif>=0.22.0",
]
